and the programmer knows how much of the image he got, 'cos he interrupted
it from the callback. If the programmer wants to trim the image, he knows
where to trim it, but if he/she wants to display a part-loaded image,
that'll work sanely.

I think this is more sane behaviour, having tested it in feh and
imlib2_view, but feel free to disagree ;-)

_______________________________________________

Wed Jul 12 22:20:53 PDT 2000
(KainX)

It's generally a good idea to increment the reference count when you
implement reference counting.  This should fix the mysterious problems
people have been having with Imlib2 stealing pixmaps out from under
Eterm.

_______________________________________________

Fri Aug 10 13:33:13 PDT 2001
(KainX)

None of the libraries are now absolute requirements.  Everything that
requires external support which Imlib2 itself doesn't specifically
need can now be optionally built.

_______________________________________________

Tue Jan 15 15:22:06 EST 2002
(KainX)

Fixed a whole slew of potential buffer overflows, hopefully including
the one recently posted to BUGTRAQ.

_______________________________________________

Mon Mar 31 15:20:43 EST 2003
(KainX)

Finally got around to fixing the build.  Having Imlib2 already installed
should no longer be necessary to build it.

_______________________________________________

Thu Apr  3 14:06:53 EST 2003
(KainX)

Rearranged include directory order to make sure
local headers are found before system ones.

_______________________________________________

Thu Apr  3 20:48:27 EST 2003
(KainX)

Minor Makefile.am tweak which apparently helps portability.

_______________________________________________

Sat Jul 12 21:06:14 EDT 2003
(KainX)

Patch from Yuri Hudobin <glassy_ape@users.sourceforge.net>
for Freetype2 support.

_______________________________________________

Sat Jul 12 21:33:20 EDT 2003
(KainX)

Up version numbers.

_______________________________________________